--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.1",
     "aws-amplify": "^6.15.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
