--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.13.1",
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.15.8",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
