--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@aws-amplify/backend": "^1.17.0",
     "@aws-amplify/backend-cli": "^1.8.0",
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
